@@ -1,5 +1,4 @@
 #!/bin/bash
-java -XX:+AggressiveOpts -XX:+UseG1GC -XX:+UseStringDeduplication -Xmx8G \
+java -XX:+UseG1GC -XX:+UseStringDeduplication -Xmx3G \
   -Dlogback.configurationFile=/opt/eventsim/logback.xml \
   -jar eventsim-assembly-2.0.jar $*
-
